--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".activities.AddActivity" />
         <activity android:name=".activities.ProductsActivity" />
+        <activity android:name=".activities.SellActivity" />
     </application>
 
 </manifest>
