PART-08-BossModeActivity *Added BossMode *Used SharedPreferences

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".activities.AddActivity" />
         <activity android:name=".activities.ProductsActivity" />
         <activity android:name=".activities.SellActivity" />
+        <activity android:name=".activities.BossModeActivity"/>
     </application>
 
 </manifest>
